manifests/application/app-svc-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  type: ClusterIP
  ports:
  - targetPort: 8080
    port: 8080
    protocol: TCP
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: app
      labels:
        app: app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: app
        image: hanum20/spring-petclinic-data-jdbc:latest
        securityContext:
          runAsUser: 999
          runAsGroup: 998
        ports:
        - name: default
          containerPort: 8080
        volumeMounts:
        - name: log-dir
          mountPath: /app/logs
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
          limits:
            cpu: 400m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /manage/health/liveness
            port: 8080
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 6
        readinessProbe:
          httpGet:
            path: /manage/health/readiness
            port: 8080
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
      volumes:
      - name: log-dir
        hostPath:
          type: DirectoryOrCreate
          path: /logs
